--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>My React Boilerplate</title>
+
 </head>
 <body>
-  <div id="app"></div>
+  <div id="root"></div>
 </body>
 </html>
