--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>My React Boilerplate</title>
 
 </head>
-<body>
+<body>ccx
   <div id="root"></div>
-<script type="text/javascript" src="main.50ece19ed0473ab20f44.js"></script></body>
+<script type="text/javascript" src="main.0f5661c07c0dc01662fc.js"></script></body>
 </html>
